# databricks_bootcamp_2026

./: README.md  cluster_config.json  databricks.yml  pyproject.toml
.claude/: settings.local.json
first_db_project_git/: README.md  databricks.yml  pyproject.toml
first_db_project_git/resources/: first_db_project_git_etl.pipeline.yml  sample_job.job.yml
first_db_project_git/src/: sample_notebook.ipynb
first_db_project_git/src/first_db_project_git/: main.py
first_db_project_git/src/first_db_project_git_etl/: README.md
first_db_project_git/src/first_db_project_git_etl/transformations/: sample_trips_first_db_project_git.py  sample_zones_first_db_project_git.py
first_db_project_git/tests/: sample_taxis_test.py
notebooks/: 01_bronze_setup.py  02_bronze_sample_load.py  03_bronze_eda.py  04_bronze_eda_local.ipynb  04_silver_transform.py  05_gold_repo_monthly.py  06_gold_repo_lifespan.py  07_streaming_24h_activity.py  08_full_data_load.py
notebooks/local/: 01_bronze_setup_local.py  02_bronze_sample_load_local.py  03_bronze_eda_local.py  __init__.py  connect_setup.py
src/github_lakehouse/: __init__.py  config.py
src/github_lakehouse/bronze/: __init__.py  ingestion_job.py  schemas.py
src/github_lakehouse/bronze/tests/: __init__.py  conftest.py  test_bronze.py
src/github_lakehouse/ingestion/: __init__.py  downloader.py
src/github_lakehouse/ingestion/tests/: test_downloader.py
src/github_lakehouse/tests/: conftest.py
